[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/speed.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sprites/SPEED/i_am_speed.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 227.305, 144.754 )

[sub_resource type="CapsuleShape2D" id=2]
radius = 94.3591
height = 655.264

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 553.722, 598.949 )

[node name="enemy" type="KinematicBody2D"]
collision_layer = 16
collision_mask = 35
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 152.63, 431.878 )
scale = Vector2( 2.09819, 3.43229 )
shape = SubResource( 1 )

[node name="floor_checker" type="RayCast2D" parent="."]
scale = Vector2( 25, 25 )
enabled = true
cast_to = Vector2( 0, 40 )
collision_mask = 2

[node name="top_checker" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 33

[node name="CollisionShape2D" type="CollisionShape2D" parent="top_checker"]
position = Vector2( 119.569, -219.32 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="sides_checker" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 33

[node name="CollisionShape2D" type="CollisionShape2D" parent="sides_checker"]
position = Vector2( 126.611, 434.169 )
rotation = 1.5708
shape = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 148, 428 )
scale = Vector2( 3.15, 3.125 )
texture = ExtResource( 2 )

[node name="Timer2" type="Timer" parent="."]

[connection signal="body_entered" from="top_checker" to="." method="_on_top_checker_body_entered"]
[connection signal="body_entered" from="sides_checker" to="." method="_on_sides_checker_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
